spade-tests/src/snapshots/spade_tests__integration__namespacing_adds_to_the_correct_namespace.snap
---
source: spade-tests/src/integration.rs
---
mod X {
    entity x() -> int<2> {
        1
    }
}

entity top() -> int<2> {
    x()
}


error: Use of undeclared name x
  ┌─ testinput:8:5
  │
8 │     x()
  │     ^ Undeclared name


